Closed Bug 240558 Opened 22 years ago Closed 22 years ago

Message filters with action to move to folder with "@" or "!" in the name was corrupted again (Bug 229345 was regressed)

Categories

(MailNews Core :: Filters, defect)

x86
Windows 2000
defect
Not set
major

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: World, Assigned: jshin1987)

Details

Attachments

(1 file)

User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.7b) Gecko/20040414 Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.7b) Gecko/20040414 Message filters, whose action is move to folder with "@" or "!" in the name, was corrupted again - Bug 229345 was regressed. (1) Already defined filters which point to folder name with "@" or "!" were disabled. (2) Newly created filter which point to folder name with "@" or "!" does not escape "@" or "!" of action-value in msgFilterRules.dat. This new filter works. These are completely same symptom of Bug 229345. 2004-04-06 trunk nightly build has no problem. nsMsgUtils.cpp is the fixed source by bug 229345. Change histry of nsMsgUtils.cpp by Bonsai ; 2004-01-07 08:04 by bug 229345 2004-04-12 21:07 by bug 229032 Reproducible: Always Steps to Reproduce:
Additional information. 2004041208-trunk(Zip build)/Win-2K(SP4) does not have this problem.
Summary: Message filters with action to move to folder with "@" or "!" in the name was corrupted again (Bug 229345 was regressed) → Message filters with action to move to folder with "@" or "!" in the name was corrupted again (Bug 229345 was regressed)
My patch for bug 229032 reverted back to NS_(Un)EscapeURL() from ns(Un)Escape. I'll make a patch tomorrow.
Assignee: sspitzer → jshin
Status: UNCONFIRMED → NEW
Ever confirmed: true
Attached patch patchSplinter Review
Sorry it took me so long. I made a filter moving mails to a folder with '@' in its name with mozilla 1.6 and then tested it with the trunk build with this patch applied. The filter worked fine.
Comment on attachment 146567 [details] [diff] [review] patch asking for r/sr
Attachment #146567 - Flags: superreview?(mscott)
Attachment #146567 - Flags: review?(bienvenu)
Blocks: 240476
Comment on attachment 146567 [details] [diff] [review] patch I didn't see a change to any of the callers of this routine even though the signature changed.
Comment on attachment 146567 [details] [diff] [review] patch the callers were probably already using things that were flat strings...
Attachment #146567 - Flags: review?(bienvenu) → review+
Comment on attachment 146567 [details] [diff] [review] patch ah thanks David
Attachment #146567 - Flags: superreview?(mscott) → superreview+
...although the callee isn't using it as a flat string anyway...
Ditto. I have two folders starting with "!" -- when I install an nightly build, the filters for those folders get disabled becasue the folders cannot be found. Once I re-select the folders the filters work fine.
(In reply to comment #9) > I have two folders starting with "!" -- when I install an nightly build, the > filters for those folders get disabled becasue the folders cannot be found. > Once I re-select the folders the filters work fine. Since patch caused this regression was applied at 21:07 on 2004-04-12 (by bug 229032), last working build is 2004-04-12 13:00 build(Win,Zip build). And backout nor proposed patch is not applied on any nightlies yet. Use builds after 1/07 & before 4/12 if you experienced filter disable problem.
Oh no! 1.7 RC1 has been released without fix for this bug.
Severity: normal → major
Flags: blocking1.7?
My mega mailnews patch for bug 229032 wasn't landed in 1.7 branch. It was only for 1.8alpha.
Flags: blocking1.7?
It is unclear from your statement which branch of the tree. My nightly build says "1.8a" but did the bug appear before the 1.7 and 1.8 branches diverged?
it did not. Also, some of the early 1.8 builds might have said 1.7 or 1.7b on them...
jshin: Would it make sense to ask "blocker1.7?" status and fix this for 1.7final, too ?
this bug is not in 1.7 - jshin's changes did not get checked into 1.7
removing from the 0.6 blocker list since this isn't in 1.7
No longer blocks: 240476
Jungshik Shin, did you fix this bug? Or only partial fix? I've found that Message filter for folder name ! or @ is escaped successfully again on 2004050308-trunk/Win-2K. (I could not aware of problem solution since I already changed ! and @ ) ( in all folders to $ in order to avoid this bug of my only mailer on 4/21. ) And Bonsai says you checked in patch for this bug to mozilla/ mailnews/ base/ util/ nsMsgUtils.cpp at 2004-04-21 03:39.
sorry i forgot to mark this as fixed. fix checked in a while ago.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Product: MailNews → Core
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: