bug 240558 : mail filters moving emails to a folder with '@' or '!' in its name get disabled (r=bienvenu, sr=mscott)